Use `Files.readString` in J2clMinifier to simplify the logic.
PiperOrigin-RevId: 817817909